syntax = "proto2";

option go_package = "github.com/ydb-platform/nbs/cloud/storage/core/tools/common/go/configurator/kikimr-proto";

message TLogConfig {
    message TEntry {
        optional bytes Component = 1;
        optional uint32 Level = 2;
        optional uint32 SamplingLevel = 3;
        optional uint32 SamplingRate = 4;
    }

    repeated TEntry Entry = 1;
    optional bool   SysLog = 2;
    optional uint32 DefaultLevel = 4;
    optional string SysLogService = 5;
    optional uint64 TimeThresholdMs = 6;
    optional string BackendFileName = 7;
    optional bool   SysLogToStdErr = 8;
}
